--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 futures-util = "0.3.31"
 tokio = { version = "1.48.0", features = ["full"] }
 zbus = { version = "5.12.0", features = ["tokio"] }
+niri-ipc = { git = "https://github.com/yalter/niri.git" }
+
