--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ futures-util = "0.3.31"
 tokio = { version = "1.48.0", features = ["full"] }
 zbus = { version = "5.12.0", features = ["tokio"] }
 niri-ipc = { git = "https://github.com/yalter/niri.git" }
+log = "0.4.29"
+env_logger = "0.11.8"
 
